[package]
name = "lattescript"
version = "0.1.1"
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://limey.me/lattescript"
description = "LatteScript is a WIP language written in Rust aiming to be unique from other languages"
documentation = "https://docs.rs/lattescript"
readme = "README.md"
repository = "https://github.com/limeyteam/lattescript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"